--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <h1>Privacy Policy for LiftingBot</h1>
-    <p>Last updated: [Current Date]</p>
+    <p>Last updated: 03/26/2025</p>
 
     <h2>1. Information We Collect</h2>
     <p>We collect the following types of information:</p>
@@ -68,6 +68,6 @@
     <p>We may update this privacy policy from time to time. We will notify you of any changes by posting the new policy on this page.</p>
 
     <h2>9. Contact Us</h2>
-    <p>If you have any questions about this Privacy Policy, please contact us at: [Your Contact Email]</p>
+    <p>If you have any questions about this Privacy Policy, please contact us at: anooj8000@gmail.com</p>
 </body>
 </html>
