--- a/index.html
+++ b/index.html
@@ -3,71 +3,229 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LiftingBot Privacy Policy</title>
+    <title>LiftingBot - AI Fitness Companion</title>
     <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            line-height: 1.6;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            color: #333;
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
         }
-        h1, h2 {
+
+        body {
+            background-color: #151718;
+            color: #FFFFFF;
+            line-height: 1.6;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
+
+        /* Hero Section */
+        .hero {
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            padding: 60px 20px;
+        }
+
+        .hero-content {
+            max-width: 800px;
+        }
+
+        .logo {
+            width: 120px;
+            height: 120px;
+            margin-bottom: 30px;
+        }
+
+        h1 {
+            font-size: 48px;
+            margin-bottom: 20px;
             color: #BB86FC;
+        }
+
+        .subtitle {
+            font-size: 24px;
+            color: #A0A0A0;
+            margin-bottom: 40px;
+        }
+
+        .cta-button {
+            display: inline-block;
+            background-color: #BB86FC;
+            color: #FFFFFF;
+            padding: 16px 32px;
+            border-radius: 30px;
+            text-decoration: none;
+            font-weight: bold;
+            font-size: 18px;
+            transition: opacity 0.2s;
+        }
+
+        .cta-button:hover {
+            opacity: 0.9;
+        }
+
+        /* Features Section */
+        .features {
+            padding: 100px 0;
+            background-color: #1E1E1E;
+        }
+
+        .features-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 30px;
+            margin-top: 60px;
+        }
+
+        .feature-card {
+            background-color: #2D2D2D;
+            padding: 40px;
+            border-radius: 16px;
+            text-align: center;
+            transition: transform 0.3s;
+        }
+
+        .feature-card:hover {
+            transform: translateY(-5px);
+        }
+
+        .feature-icon {
+            font-size: 48px;
+            color: #BB86FC;
+            margin-bottom: 20px;
+        }
+
+        /* Pricing Section */
+        .pricing {
+            padding: 100px 0;
+        }
+
+        .pricing-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 30px;
+            margin-top: 60px;
+        }
+
+        .pricing-card {
+            background-color: #1E1E1E;
+            padding: 40px;
+            border-radius: 16px;
+            text-align: center;
+            border: 1px solid #2D2D2D;
+        }
+
+        .pricing-card.highlighted {
+            border-color: #4CAF50;
+            border-width: 2px;
+        }
+
+        .price {
+            font-size: 36px;
+            color: #BB86FC;
+            margin: 20px 0;
+        }
+
+        .price-period {
+            color: #A0A0A0;
+        }
+
+        .feature-list {
+            list-style: none;
+            margin: 30px 0;
+        }
+
+        .feature-list li {
+            margin: 10px 0;
+            color: #E0E0E0;
+        }
+
+        @media (max-width: 768px) {
+            .hero {
+                padding: 40px 20px;
+            }
+
+            h1 {
+                font-size: 36px;
+            }
+
+            .subtitle {
+                font-size: 20px;
+            }
+
+            .features, .pricing {
+                padding: 60px 0;
+            }
         }
     </style>
 </head>
 <body>
-    <h1>Privacy Policy for LiftingBot</h1>
-    <p>Last updated: 03/26/2025</p>
+    <div class="hero">
+        <div class="hero-content">
+            <img src="assets/images/dumbell.png" alt="LiftingBot Logo" class="logo">
+            <h1>Welcome to LiftingBot</h1>
+            <p class="subtitle">Your AI-powered fitness companion for personalized workouts and nutrition guidance</p>
+            <a href="/app" class="cta-button">Get Started</a>
+        </div>
+    </div>
 
-    <h2>1. Information We Collect</h2>
-    <p>We collect the following types of information:</p>
-    <ul>
-        <li>Email address (for authentication)</li>
-        <li>Chat history and saved workouts/nutrition plans</li>
-        <li>Usage data (number of chats, feature usage)</li>
-    </ul>
+    <section class="features">
+        <div class="container">
+            <h2>Features</h2>
+            <div class="features-grid">
+                <div class="feature-card">
+                    <div class="feature-icon">💪</div>
+                    <h3>Personalized Workouts</h3>
+                    <p>Get custom workout plans tailored to your goals and fitness level</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">🥗</div>
+                    <h3>Nutrition Guidance</h3>
+                    <p>Receive personalized nutrition advice and meal planning</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">🤖</div>
+                    <h3>AI Chat Support</h3>
+                    <p>24/7 access to your personal AI fitness trainer</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
-    <h2>2. How We Use Your Information</h2>
-    <p>We use the collected information for:</p>
-    <ul>
-        <li>Providing personalized workout and nutrition guidance</li>
-        <li>Maintaining and improving our services</li>
-        <li>Managing your account and subscription</li>
-        <li>Ensuring proper app functionality</li>
-    </ul>
-
-    <h2>3. Data Storage</h2>
-    <p>Your data is securely stored using Supabase's infrastructure. We implement appropriate security measures to protect your information.</p>
-
-    <h2>4. Third-Party Services</h2>
-    <p>We use the following third-party services:</p>
-    <ul>
-        <li>OpenAI (for chat functionality)</li>
-        <li>Supabase (for data storage)</li>
-        <li>Apple's App Store services</li>
-    </ul>
-
-    <h2>5. Your Rights</h2>
-    <p>You have the right to:</p>
-    <ul>
-        <li>Access your personal data</li>
-        <li>Delete your account and associated data</li>
-        <li>Export your saved workouts and nutrition plans</li>
-    </ul>
-
-    <h2>6. Data Retention</h2>
-    <p>We retain your data for as long as your account is active. Upon account deletion, your data will be permanently removed within 30 days.</p>
-
-    <h2>7. Children's Privacy</h2>
-    <p>Our service is not intended for users under 13 years of age. We do not knowingly collect information from children under 13.</p>
-
-    <h2>8. Changes to This Policy</h2>
-    <p>We may update this privacy policy from time to time. We will notify you of any changes by posting the new policy on this page.</p>
-
-    <h2>9. Contact Us</h2>
-    <p>If you have any questions about this Privacy Policy, please contact us at: anooj8000@gmail.com</p>
+    <section class="pricing">
+        <div class="container">
+            <h2>Choose Your Plan</h2>
+            <div class="pricing-grid">
+                <div class="pricing-card">
+                    <h3>Basic</h3>
+                    <div class="price">$4.99<span class="price-period">/month</span></div>
+                    <ul class="feature-list">
+                        <li>50 chats per day</li>
+                        <li>Workout planning</li>
+                        <li>Nutrition guidance</li>
+                    </ul>
+                    <a href="/signup" class="cta-button">Get Started</a>
+                </div>
+                <div class="pricing-card highlighted">
+                    <h3>Premium</h3>
+                    <div class="price">$9.99<span class="price-period">/month</span></div>
+                    <ul class="feature-list">
+                        <li>Unlimited chats</li>
+                        <li>Priority support</li>
+                        <li>Custom workout library</li>
+                    </ul>
+                    <a href="/signup" class="cta-button">Get Started</a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
