--- a/index.html
+++ b/index.html
@@ -170,14 +170,15 @@
 <body>
     <div class="hero">
         <div class="hero-content">
-            <img src="assets/images/dumbell.png" alt="LiftingBot Logo" class="logo">
+            <img src="icon.png" alt="LiftingBot Logo" class="logo">
             <h1>Welcome to LiftingBot</h1>
             <p class="subtitle">Your AI-powered fitness companion for personalized workouts and nutrition guidance</p>
-            <a href="/app" class="cta-button">Get Started</a>
+            <p class="subtitle">For less than the cost of an energy drink!</p>
+            <a href="#features" class="cta-button">Get Started</a>
         </div>
     </div>
 
-    <section class="features">
+    <section class="features" id='features'>
         <div class="container">
             <h2>Features</h2>
             <div class="features-grid">
@@ -200,7 +201,7 @@
         </div>
     </section>
 
-    <section class="pricing">
+<!--     <section class="pricing">
         <div class="container">
             <h2>Choose Your Plan</h2>
             <div class="pricing-grid">
@@ -226,6 +227,6 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 </body>
 </html>
