--- a/index.html
+++ b/index.html
@@ -200,6 +200,62 @@
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-links">
+                <a href="/privacy-policy">Privacy Policy</a>
+                <span class="separator">|</span>
+                <a href="mailto:support@liftingbot.com">support@liftingbot.com</a>
+            </div>
+            <p class="copyright">© 2024 LiftingBot. All rights reserved.</p>
+        </div>
+    </footer>
+
+<style>
+    .footer {
+        background-color: #1E1E1E;
+        padding: 40px 20px;
+        margin-top: auto;
+        border-top: 1px solid #2D2D2D;
+    }
+
+    .footer-content {
+        max-width: 1200px;
+        margin: 0 auto;
+        text-align: center;
+    }
+
+    .footer-links {
+        margin-bottom: 20px;
+    }
+
+    .footer-links a {
+        color: #A0A0A0;
+        text-decoration: none;
+        transition: color 0.2s;
+        font-size: 16px;
+    }
+
+    .footer-links a:hover {
+        color: #BB86FC;
+    }
+
+    .separator {
+        color: #2D2D2D;
+        margin: 0 15px;
+    }
+
+    .copyright {
+        color: #666;
+        font-size: 14px;
+    }
+
+    @media (max-width: 768px) {
+        .footer {
+            padding: 30px 20px;
+        }
+    }
+</style>
 
 <!--     <section class="pricing">
         <div class="container">
