--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             <div class="footer-links">
                 <a href="/privacy-policy">Privacy Policy</a>
                 <span class="separator">|</span>
-                <a href="mailto:support@liftingbot.com">support@liftingbot.com</a>
+                <a href="mailto:support@liftingbot.com">liftbotco@gmail.com</a>
             </div>
             <p class="copyright">© 2024 LiftingBot. All rights reserved.</p>
         </div>
